bk_ida/gccida/c3/reg_to_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/reg-stack.c:888:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/reg-stack.c:889:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/reg-stack.c:1057:35: error: must use 'enum' tag to refer to type 'mode_class'
v47 = ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( v45 >> 14) & 0x3FC)) - 5) < 2) + ( _DWORD)rtint; 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/reg-stack.c:1057:59: error: use of undeclared identifier 'mode_class_0'
v47 = ( ( unsigned int)( *( const mode_class *)( ( char *)mode_class_0 + ( ( v45 >> 14) & 0x3FC)) - 5) < 2) + ( _DWORD)rtint; 
                                                          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reg_to_stack/src/obj/reg-stack.o] Error 1
